Fix main width and add wrap and overflow to logo class

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,14 @@ body {
 
 .logo {
   display: flex;
+  flex-wrap: wrap;
   position: absolute;
   top: 200px;
   justify-content: center;
   align-items: center;
   width: 35vw;
-  background: rgba(0,0,0,.25);
+  background: rgba(0, 0, 0, .25);
+  overflow: hidden;
 }
 
 #logo {
@@ -57,8 +59,7 @@ body {
 }
 
 .main {
+  min-width: 65vw;
   max-width: 65vw;
   background-color: lightgray;
-  padding: 25px;
 }
-
